--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,7 @@ jobs:
       - uses: rickstaa/action-create-tag@v1
         if: steps.check.outputs.changed == 'true'
         with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
           tag: 'v${{ steps.check.outputs.version }}'
 
       - name: Create Release
