--- a/package.json
+++ b/package.json
@@ -28,8 +28,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
-    "gsap": "^3.11.4",
-    "gsap-trial": "^3.11.5",
+    "gsap": "npm:@gsap/shockingly@^3.11.5",
     "nuxt-icon": "^0.3.2"
   }
 }
