--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@d0rich/nuxt-design-system",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "main": "./nuxt.config.ts",
   "scripts": {
     "lint:ts": "nuxi typecheck",
@@ -28,7 +28,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
-    "gsap": "^3.11.4",
+    "gsap": "npm:@gsap/shockingly@^3.11.5",
     "nuxt-icon": "^0.3.2"
   }
 }
