Optional GSAP dependency (#5)
* Specify optional dependency

* Swap gsap versions

* postinstall script draft

* Install fallback dependency

* Ignore MorphSVGPlugin error

* Specify rollup external dependency

* Update external modules

* Use dynamic import for gsap/MorphSVGPlugin

* Externalize module if not resolved

* Check module existense with fs

* Functionality if morphSVG is not available

* Manually create not existing file

* Update export in fallback module

* Update GSAP plugins import

* GSAP is available with token and without token

* Buetify and optimize code

* Update version

--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "@d0rich/nuxt-design-system",
-  "version": "0.2.2",
+  "version": "0.3.0",
   "main": "./nuxt.config.ts",
   "scripts": {
+    "postinstall": "node fallbackDependencies.mjs",
     "lint:ts": "nuxi typecheck",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
@@ -30,5 +31,8 @@
     "@tailwindcss/typography": "^0.5.8",
     "gsap": "npm:@gsap/shockingly@^3.11.5",
     "nuxt-icon": "^0.3.2"
+  },
+  "optionalDependencies": {
+    "gsap": "^3.11.5"
   }
 }
