--- a/package.json
+++ b/package.json
@@ -32,11 +32,10 @@
     "nuxt-icon": "^0.3.2"
   },
   "optionalDependencies": {
-    "gsap": "npm:@gsap/business@^3.11.5"
+    "gsap": "npm:@gsap/shockingly@^3.11.5"
   },
   "fallbackDependencies": {
     "gsap": [
-      "npm:@gsap/shockingly@^3.11.5",
       "npm:@gsap/simply@^3.11.5",
       "^3.11.5"
     ]
