--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@d0rich/nuxt-design-system",
-  "version": "0.3.3",
+  "version": "0.3.4",
   "main": "./nuxt.config.ts",
   "scripts": {
     "postinstall": "node fallbackDependencies.mjs",
@@ -32,10 +32,11 @@
     "nuxt-icon": "^0.3.2"
   },
   "optionalDependencies": {
-    "gsap": "npm:@gsap/shockingly@^3.11.5"
+    "gsap": "npm:@gsap/business@^3.11.5"
   },
   "fallbackDependencies": {
     "gsap": [
+      "npm:@gsap/shockingly@^3.11.5",
       "npm:@gsap/simply@^3.11.5",
       "^3.11.5"
     ]
