--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -21,4 +21,5 @@ jobs:
       - name: Archive test build artifacts
         uses: actions/upload-artifact@v3
         with:
+          name: dist
           path: dist
