--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -22,4 +22,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: dist
-          path: dist
+          path: .output/public
