Check without token

--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,2 @@
-//npm.greensock.com/:_authToken=${GSAP_TOKEN}
+//npm.greensock.com/:_authToken=${NOT_GSAP_TOKEN}
 @gsap:registry=https://npm.greensock.com
