--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:prettier",
     "lintfix": "prettier --write --list-different . && eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore . --fix",
+    "test": "vitest",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
@@ -23,8 +24,8 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vitest": "^0.0.56",
-    "jsdom": "^21.1.1",
     "nuxt": "^3.3.1",
+    "playwright": "^1.32.1",
     "prettier": "^2.8.4",
     "typescript": "^5.0.2",
     "vitest": "^0.29.7",
