--- a/.github/workflows/test-build.yml
+++ b/.github/workflows/test-build.yml
@@ -1,4 +1,4 @@
-name: Build
+name: Test Build
 
 on:
   push:
@@ -9,7 +9,7 @@ env:
 
 jobs:
   test-build:
-    name: Publish to NPM
+    name: Build and test
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
