--- a/package.json
+++ b/package.json
@@ -9,19 +9,26 @@
     "lint:prettier": "prettier --check .",
     "lint": "npm run lint:ts && npm run lint:js && npm run lint:prettier",
     "lintfix": "prettier --write --list-different . && eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore . --fix",
+    "test": "vitest",
     "build": "nuxt build",
     "dev": "nuxt dev",
     "generate": "nuxt generate",
     "preview": "nuxt preview"
   },
   "devDependencies": {
+    "@nuxt/test-utils": "^3.3.2",
     "@nuxtjs/eslint-config-typescript": "^12.0.0",
+    "@vitejs/plugin-vue": "^4.1.0",
+    "@vue/test-utils": "^2.3.2",
     "eslint": "^8.36.0",
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
+    "eslint-plugin-vitest": "^0.0.56",
     "nuxt": "^3.3.1",
+    "playwright": "^1.32.1",
     "prettier": "^2.8.4",
     "typescript": "^5.0.2",
+    "vitest": "^0.29.7",
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
