--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -25,7 +25,7 @@ jobs:
           node-version: 16
 
       - name: Installing packages
-        run: npm install
+        run: npm ci
 
       - name: Build Nuxt 3 static site
         run: npm run generate
