--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@d0rich/nuxt-design-system",
-  "version": "0.3.8",
+  "version": "0.3.9",
   "main": "./nuxt.config.ts",
   "scripts": {
     "postinstall": "node fallbackDependencies.mjs",
@@ -36,15 +36,13 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
+    "gsap": "npm:@gsap/shockingly@^3.11.5",
     "nuxt-icon": "^0.3.2"
   },
   "optionalDependencies": {
-    "gsap": "npm:@gsap/shockingly@^3.11.5"
+    "gsap": "^3.11.5"
   },
-  "fallbackDependencies": {
-    "gsap": [
-      "npm:@gsap/simply@^3.11.5",
-      "^3.11.5"
-    ]
+  "peerDependencies": {
+    "gsap": "^3.11.5"
   }
 }
