--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
+    "@gsap/shockingly": "^3.11.5",
     "@nuxtjs/color-mode": "^3.2.0",
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
-    "gsap": "npm:@gsap/shockingly@^3.11.5",
-    "nuxt-icon": "^0.3.2"
+    "nuxt-icon": "^0.3.2",
+    "gsap": "^3.11.5"
   },
   "optionalDependencies": {
     "gsap": "^3.11.5"
