More animation utils (#17)
* Add polygon animation utils

* Add elements utils

* safe onMounted

* lintfix

* Add animation types to exports

* Add todo

* Update version

* Remove types exports from composables

* Update workflow

* Return workflow

* Try gsap workaround

* Fix package.json

* Return dependencies before workaround

* Restructure utils

* Restructure types export

* Lintfix

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@d0rich/nuxt-design-system",
-  "version": "0.3.10",
+  "version": "0.4.0",
   "main": "./nuxt.config.ts",
   "scripts": {
     "postinstall": "node fallbackDependencies.mjs",
@@ -36,8 +36,8 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
-    "gsap": "npm:@gsap/shockingly@^3.11.5",
-    "nuxt-icon": "^0.3.2"
+    "nuxt-icon": "^0.3.2",
+    "gsap": "npm:@gsap/shockingly@^3.11.5"
   },
   "optionalDependencies": {
     "gsap": "^3.11.5"
