--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -6,10 +6,28 @@ on:
   workflow_dispatch:
 
 jobs:
+  publish-npm:
+    name: Publish to NPM
+    if: github.repository_owner == 'd0rich'
+    outputs:
+      version: ${{ steps.publish.outputs.version }}
+      type: ${{ steps.publish.outputs.type }}
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 16
+      - uses: JS-DevTools/npm-publish@v1
+        id: publish
+        with:
+          access: public
+          token: ${{ secrets.NPM_PUBLISH_TOKEN }}
+
   release:
     runs-on: ubuntu-latest
-    outputs:
-      version_changed: ${{ steps.check.outputs.changed }}
+    needs: [publish-npm]
+    if: needs.publish-npm.outputs.type != 'none'
     steps:
       - uses: actions/checkout@v3
 
@@ -22,27 +40,13 @@ jobs:
       - uses: rickstaa/action-create-tag@v1
         if: steps.check.outputs.changed == 'true'
         with:
-          tag: 'v${{ steps.check.outputs.version }}'
+          tag: 'v${{ needs.publish-npm.outputs.version }}'
 
       - name: Create Release
         if: steps.check.outputs.changed == 'true'
         uses: ncipollo/release-action@v1
         with:
-          tag: 'v${{ steps.check.outputs.version }}'
+          tag: 'v${{ needs.publish-npm.outputs.version }}'
           generateReleaseNotes: true
           draft: false
 
-  publish-npm:
-    name: Publish to NPM
-    needs: [release]
-    if: (needs.release.outputs.version_changed == 'true') && (github.repository_owner == 'd0rich')
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-      - uses: actions/setup-node@v3
-        with:
-          node-version: 16
-      - uses: JS-DevTools/npm-publish@v1
-        with:
-          access: public
-          token: ${{ secrets.NPM_PUBLISH_TOKEN }}
