--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,6 @@ name: Build & Deploy
 on:
   workflow_dispatch:
   push:
-    branches:
-      - master
   # schedule:
   #   - cron: "0 3 * * *"
 
@@ -26,6 +24,12 @@ jobs:
 
       - name: Installing packages
         run: npm ci
+
+      - name: Prepare Nuxt
+        run: npx nuxi prepare
+
+      - name: Test
+        run: npm run test
 
       - name: Build Nuxt 3 static site
         run: npm run generate
