Update meta information

--- a/package.json
+++ b/package.json
@@ -1,7 +1,14 @@
 {
   "name": "@d0rich/nuxt-design-system",
-  "version": "0.5.2",
+  "version": "0.5.3",
   "main": "./nuxt.config.ts",
+  "description": "Design system for d0rich's projects based on Nuxt 3 and Tailwind CSS",
+  "repository": "https://github.com/d0rich/nuxt-design-system.git",
+  "author": {
+    "name": "Nikolay Dorofeev",
+    "email": "dorich2000@gmail.com",
+    "url": "https://d0rich.me"
+  },
   "scripts": {
     "postinstall": "node fallbackDependencies.mjs",
     "lint:ts": "nuxi typecheck",
