--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "scripts": {
     "postinstall": "node fallbackDependencies.mjs",
-    "prepare": "nuxt prepare && nuxt prepare .playground/",
+    "prepare": "nuxi prepare && nuxi prepare .playground/",
     "lint:ts": "nuxi typecheck",
     "lint:js": "eslint --ext \".js,.ts,.vue\" --ignore-path .gitignore .",
     "lint:prettier": "prettier --check .",
