--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "prettier": "^2.8.4",
     "typescript": "^5.0.2",
     "vitest": "^0.29.7",
+    "vue-gtag": "^2.0.1",
     "vue-tsc": "^1.2.0"
   },
   "dependencies": {
@@ -56,7 +57,7 @@
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
     "nuxt-icon": "^0.3.2",
-    "gsap": "npm:@gsap/shockingly@^3.11.5"
+    "gsap": "^3.11.5"
   },
   "optionalDependencies": {
     "gsap": "^3.11.5"
