--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "eslint-config-prettier": "^8.7.0",
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-vitest": "^0.1.4",
+    "gsap": "npm:@gsap/shockingly@^3.11.5",
     "nuxt": "^3.3.1",
     "playwright": "^1.32.1",
     "prettier": "^2.8.4",
