--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@nuxtjs/google-fonts": "^3.0.0-1",
     "@nuxtjs/tailwindcss": "^6.6.0",
     "@tailwindcss/typography": "^0.5.8",
+    "flubber": "^0.4.2",
     "gsap": "^3.12.2",
     "nuxt-icon": "^0.4.0"
   }
